--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,5 +13,7 @@ spring.jpa.properties.hibernate.highlight_sql=true
 
 logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate.orm.jdbc.bind=trace
+# Spring security? ?? ??? ??
+logging.level.org.springframework.security=debug
 
 spring.servlet.multipart.max-file-size=1000000000
